2015-02-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs: Remove global variable
	*clm-output-device*.

2015-02-18  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs: Replace audio-output-device
	with mus-audio-default.

2015-02-01  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs (notelength): Computation should
	be done in does-part to honor global variable *clm-tempo*.

2015-01-30  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/examp.fs (read-ascii): new-sound args changed.

2015-01-10  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/printf.c (doprnt, string_doprnt): Format %c accepts
	field width like %s.

	* src/string.c (fth_string_replace): Bugfix.

2014-12-28  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac: New version number: 1.3.8

	* examples/scripts/fth-additions.el: File removed.
	* examples/scripts/xg.fth: File removed.

2014-12-08  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* Makefile.in: add chmod -R +w ${distdir} to target dist.

2014-12-04  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/misc.c (fth_parse_word): If an existing word does
	not exist, return the found name itself (for
	fth_documentation_ref etc).

	* src/utils.c: Set trace_var to *promptstyle* to trigger
	actually a promptstyle switch.

2014-12-03  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/extensions.fs (delete-selection-and-smooth):
	Removed, it already exists in Snd.

2014-11-12  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/scripts/play-sound.fth.in: recording part removed.

2014-11-11  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs (play-sound): added.

	* examples/site-lib/clm.fs:
	* examples/site-lib/examp.fs:
	* examples/site-lib/popup.fs:
	* examples/site-lib/snd-forth-init.fs: Rename all words